# ireiat

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  bitbucket-pipelines.yaml  bitbucket-pipelines.yml  config.yml  pyproject.toml  run.py  salus.yaml
ci-examples/: bitbucket-pipelines.yml
data/: config.yaml
data/rail_network/: im_terminals.csv  rail_interchange_impedances.yaml
data/transformed/: faf_zone_id_to_state_county_id.pickle
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/_static/: traffic_example.csv
docs/cli/: commands.rst  configuration.rst
docs/demand/: faf.rst
docs/network/: highway_network.rst  index.rst  marine_network.rst  rail_network.rst
docs/source/: conf.py
notebooks/: 02_faf5_od_to_county_od.ipynb  02a_faf5_od_to_county_od.ipynb  03a_algorithm_b.ipynb  03a_simple_algorithm_b.ipynb  04_rail_dummy.ipynb  Data sources.ipynb  Examine FAF network.ipynb  OD_by_County_V2.ipynb  example.ipynb  example_cpp_routing_python.ipynb  example_simple_algorithm_b.ipynb  graph.ipynb  process_waterways.ipynb  tap_plus_recover_paths.ipynb  test_impedance_yaml.ipynb  view_areas.ipynb
notebooks/archive/: 01b_highway_node_to_county.ipynb
src/ireiat/: config.py  run.py
src/ireiat/config/: constants.py  data_pipeline.py  faf_enum.py  rail_network_constants.py  runtime.py
src/ireiat/data_pipeline/: __init__.py  io_manager.py  metadata.py
src/ireiat/data_pipeline/assets/: faf5_to_county.py  sources.py
src/ireiat/data_pipeline/assets/demand/: faf5_allocation.py  faf5_helpers.py  faf5_to_county.py  faf5_tons.py  sources.py
src/ireiat/data_pipeline/assets/highway_network/: highway_ball_tree.py  highway_graph.py  sources.py
src/ireiat/data_pipeline/assets/marine_network/: marine_ball_tree.py  marine_graph.py  sources.py
src/ireiat/data_pipeline/assets/rail_network/: __init__.py  data_handler.py  impedance.py  narn_filter.py  rail_graph.py  sources.py  terminals.py
src/ireiat/postprocessing/: postprocessor.py
src/ireiat/r_source/: tap.r
src/ireiat/tests/: test_gis.py
src/ireiat/tests/data_pipeline/: impedance.py  test_impedance.py  test_impedance_override.py  test_io_manager.py  test_read.py
src/ireiat/util/: cacheable.py  data_handler.py  data_structures.py  faf_constants.py  graph.py  http.py  logging_.py  rail_network_constants.py
src/util/: http.py  logging_.py
tests/: test_cache.py
(+5 files in other folders)
